--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^8.2.2",
-    "framer-motion": "^10.18.0"
+    "concurrently": "^8.2.2"
+ 
   }
 }
