--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "sonner": "^1.4.41",
