--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^8.2.2",
-    "react-spinners": "^0.13.8",
-    "sonner": "^1.4.41"
+    "concurrently": "^8.2.2"
+
   }
 }
