--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,8 @@
     "express-fileupload": "^1.4.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
-    "nodemon": "^3.0.1"
+    "nodemailer": "^6.9.13",
+    "nodemon": "^3.0.1",
+    "otp-generator": "^4.0.1"
   }
 }
