--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^8.2.2"
-
+    "concurrently": "^8.2.2",
+    "cors": "^2.8.5"
   }
 }
