--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@formspree/react": "^2.5.1",
     "concurrently": "^8.2.2"
-
   }
 }
