--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,9 +1,10 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# .gitignore
 
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
+.env
 
 # testing
 /coverage
@@ -17,7 +18,6 @@
 .env.development.local
 .env.test.local
 .env.production.local
-.env
 
 npm-debug.log*
 yarn-debug.log*
